Add missing Platform checks
    All substitutions and all features that are Posix specific must be annotated so that they are ignored on non-Posix platforms.